prqlc/prql-compiler/tests/integration/snapshots/integration__queries__results__basic_operations.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:skip\n# sqlite:skip\n# glaredb:skip\n# clickhouse:skip\n# mysql:skip\n# postgres:skip\nfrom [{\n  x=0\n}]\nderive {\n  a = 10 - (10 - 2),\n  b = 10 - (10 + 2),\n  c = 10 / (10 / 2),\n  d = 10 / (10 * 2),\n}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/basic_operations.prql
---
0,2,-2,2,0.5
