prqlc/prql-compiler/tests/integration/snapshots/integration__queries__results__date.snap
---
source: prqlc/prql-compiler/tests/integration/queries.rs
expression: "# mssql:test\n# glaredb:skip\nfrom invoices\ntake 20\nselect {\n    invoice_date | date.to_string \"%Y/%m/%d\"\n}\n"
input_file: prqlc/prql-compiler/tests/integration/queries/date.prql
---
2009/01/01
2009/01/02
2009/01/03
2009/01/06
2009/01/11
2009/01/19
2009/02/01
2009/02/01
2009/02/02
2009/02/03
2009/02/06
2009/02/11
2009/02/19
2009/03/04
2009/03/04
2009/03/05
2009/03/06
2009/03/09
2009/03/14
2009/03/22
